fix: popover content overflow

--- a/src/utilComponents/popover.css
+++ b/src/utilComponents/popover.css
@@ -12,7 +12,7 @@
   opacity: 0.8;
   padding: 10px;
   z-index: 1;
-  top: -4.2rem;
-  left: -5rem;
+  top: 2rem;
+  right: -2rem;
   display: block;
 }
